[REF] Add container-left-wrapper

--- a/projects/project-famidine.html
+++ b/projects/project-famidine.html
@@ -28,7 +28,8 @@
 </head>
 <body>
     <div class="wrap">
-    <div class="container-left d-flex flex-column justify-content-between">
+    <div class="container-left">
+      <div class="container-left-wrapper d-flex flex-column justify-content-between">
       <nav class="navbar navbar-expand-sm navbar-dark">
         <div class="container-fluid ps-sm-0 ms-sm-n1">
   
@@ -83,13 +84,7 @@
       </nav>
   
       <!--Hero title-->
-      <div class="hero-box mt-5 mt-sm-0 mb-2 mb-sm-5 mb-md-0">
-        <a href="./index.html" class="link-unstyled">
-          <h1>Helena WONG</h1>
-          <hr class="w-100 mt-0 mb-2">
-          <h4>WEB DESIGNER</h4>           
-        </a>
-      </div>
+      <img src="../assets/projects/famidine/famidine_hero.png" class="img-fluid">
   
       <!--Destop app-container-->
       <div class="d-flex d-none d-md-block">
@@ -99,7 +94,8 @@
           <li><a href="mailto:tszkwan1214@gmail.com" title="Email Me" class="link-light"><i class="bi bi-envelope-fill mx-2"></i></a></li>
         </ul>
       </div>
-  
+
+      </div>
     </div>
   
   <div class="container-right container me-md-0">
