[IMP] Project front page

--- a/projects/project-famidine.html
+++ b/projects/project-famidine.html
@@ -83,17 +83,11 @@
       </nav>
   
       <!--Hero title-->
-      <div class="hero-box mt-5 mt-sm-0 mb-2 mb-sm-5 mb-md-0">
-        <a href="./index.html" class="link-unstyled">
-          <h1>Helena WONG</h1>
-          <hr class="w-100 mt-0 mb-2">
-          <h4>WEB DESIGNER</h4>           
-        </a>
-      </div>
+      <img src="../assets/projects/famidine/famidine_hero.png" class="img-project-hero">
   
       <!--Destop app-container-->
-      <div class="d-flex d-none d-md-block">
-        <ul class="app-container list-unstyled d-flex">
+      <div class="d-none d-md-flex">
+        <ul class="app-container list-unstyled d-flex my-2">
           <li><a href="https://github.com/helena1214" title="My Github" class="link-light"><i class="bi bi-github mx-2"></i></a></li>
           <li><a href="https://www.linkedin.com/in/wongtszkwanhelena/" title="My Linkedin" class="link-light"><i class="bi bi-linkedin mx-2"></i></a></li>
           <li><a href="mailto:tszkwan1214@gmail.com" title="Email Me" class="link-light"><i class="bi bi-envelope-fill mx-2"></i></a></li>
@@ -102,8 +96,26 @@
   
     </div>
   
-  <div class="container-right container me-md-0">
+  <div class="container-right container me-md-0 d-flex flex-column justify-content-center">
+        <!--Product Hero title-->
+        <div class="project-hero-box text-center text-md-start mb-2 mb-sm-5 mb-md-0">
+          <h4 class="letter-space-sm">CASE STUDY</h4> 
+          <h1 class="display-1 fw-bold primary-theme">FamiDINE</h1>
+          <p class="lead text-secondary">A case study in designing a menu & ordering app for a family resturant.</p>
+        </div>
+        <div class="btn-toolbar mt-md-3 d-flex flex-column flex-md-row w-75 mx-auto ms-md-0">
+          <a type="button" class="btn btn-outline-warning my-2" href="#">TRY PROTOTYPE</a>
+          <a type="button" class="btn btn-warning d-md-none my-2" href="#">PROJECT OVERVIEW</a>
+        </div>
 
+        <!--DESKTOP Product CTA-->
+        <div class="product-CTA-next d-none d-md-block">
+          <a class="link-unstyled" type="button">
+            <h4 class="text-secondary fw-light letter-space-sm">USER RESEARCH<i class="bi bi-play-fill rounded-circle bg-warning text-light mx-2"></i></h4>
+          </a>          
+        </div>
+
+        <!--MOBILE Product CTA-->
   </div>
 
 </body>
