[REF] Side navbar in large bp

--- a/projects/project-famidine-content.html
+++ b/projects/project-famidine-content.html
@@ -83,20 +83,20 @@
       </nav>
   
       <!--Hero title-->
-      <img src="../assets/projects/famidine/famidine_hero.png" class="img-project-hero">
   
       <!--Destop app-container-->
-      <div class="d-none d-md-flex">
+      <!-- <div class="d-none d-md-flex">
         <ul class="app-container list-unstyled d-flex my-2">
           <li><a href="https://github.com/helena1214" title="My Github" class="link-light"><i class="bi bi-github mx-2"></i></a></li>
           <li><a href="https://www.linkedin.com/in/wongtszkwanhelena/" title="My Linkedin" class="link-light"><i class="bi bi-linkedin mx-2"></i></a></li>
           <li><a href="mailto:tszkwan1214@gmail.com" title="Email Me" class="link-light"><i class="bi bi-envelope-fill mx-2"></i></a></li>
         </ul>
-      </div>
+      </div> -->
   
     </div>
   
   <div class="container-right container me-md-0 d-flex flex-column justify-content-center">
+    <div class="content">
         <!--Product Hero title-->
         <div class="project-hero-box text-center text-md-start mb-2 mb-sm-5 mb-md-0">
           <h1 class="letter-space-sm">PROJECTS OVERVIEW</h1> 
@@ -129,6 +129,7 @@
             <p class="lead">After deciding the topic, I establish my role in the project and plan for the estimated project progress.</p>
           </div>
         </div>
+    </div>
 
         <!--DESKTOP Product CTA-->
         <div class="product-CTA-next d-none d-md-block">
